extract agedbrie updater

--- a/csharp.csproj
+++ b/csharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ApprovalTest.cs" />
     <Compile Include="GildedRose.cs" />
     <Compile Include="GildedRoseShould.cs" />
+    <Compile Include="ItemUpdater.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
