--- a/csharp.csproj
+++ b/csharp.csproj
@@ -61,13 +61,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgedBrieItemUpdater.cs" />
     <Compile Include="ApprovalTest.cs" />
+    <Compile Include="BackstagePassesItemUpdater.cs" />
+    <Compile Include="DefaultItemUpdater.cs" />
     <Compile Include="GildedRose.cs" />
     <Compile Include="GildedRoseShould.cs" />
     <Compile Include="ItemUpdater.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="ItemUpdaterFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SulfurasItemUpdater.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
