--- a/csharp.csproj
+++ b/csharp.csproj
@@ -63,17 +63,21 @@
   <ItemGroup>
     <Compile Include="Update\AgedBrie\AgedBrieItemUpdater.cs" />
     <Compile Include="ApprovalTest.cs" />
+    <Compile Include="Update\AgedBrie\AgedBrieItemUpdaterShould.cs" />
     <Compile Include="Update\BackstagePasses\BackstagePassesItemUpdater.cs" />
+    <Compile Include="Update\BackstagePasses\BackstagePassesItemUpdaterShould.cs" />
     <Compile Include="Update\Default\DefaultItemUpdater.cs" />
     <Compile Include="App\GildedRose.cs" />
     <Compile Include="App\GildedRoseShould.cs" />
     <Compile Include="Item\SpecialItemNames.cs" />
+    <Compile Include="Update\Default\DefaultUpdaterShould.cs" />
     <Compile Include="Update\ItemUpdater.cs" />
     <Compile Include="Item\Item.cs" />
     <Compile Include="Update\ItemUpdaterFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Update\Sulfuras\SulfurasItemUpdater.cs" />
+    <Compile Include="Update\Sulfuras\SulfurasItemUpdaterShould.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
